// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests SpruceForm.stories Example1 1`] = `
<div>
  <div>
    <h3
      class="css-18p6yz-SettingsCardTitle e1h7idos1 leafygreen-ui-feh85s"
    >
      Distro Projects
    </h3>
    <div
      class="css-akg61l-SettingsCard e1h7idos0 leafygreen-ui-1ecxdul"
    >
      <form
        class="rjsf"
        novalidate=""
      >
        <div
          class="form-group field field-object css-mg3yql-DefaultFieldContainer eny4k1v0"
          id=" root"
        >
          <fieldset
            class="css-0"
            id="root"
          >
            <div
              class="form-group field field-string css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_cloneMethod"
            >
              <div
                class="css-cjejq9-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-1iyoj2o"
                >
                  <div
                    class="leafygreen-ui-e3fvh5"
                  >
                    <label
                      class="leafygreen-ui-nf64md"
                      for="select-191"
                      id="select-190-label"
                    >
                      Project Cloning Method
                    </label>
                  </div>
                  <button
                    aria-controls="select-190-menu"
                    aria-describedby="select-190-description"
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-invalid="false"
                    aria-labelledby="select-190-label"
                    class="lg-ui-button-0000 leafygreen-ui-c8np5"
                    data-testid="leafygreen-ui-select-menubutton"
                    id="select-191"
                    type="button"
                    value="legacy-ssh"
                  >
                    <div
                      class="leafygreen-ui-v038xi"
                    />
                    <div
                      class="leafygreen-ui-16tr4y"
                    >
                      <div
                        class="leafygreen-ui-obh8q1"
                      >
                        <div
                          class="lg-ui-select-menu-0000 leafygreen-ui-17aj16e"
                        >
                          Legacy SSH
                        </div>
                      </div>
                      <svg
                        alt=""
                        aria-hidden="true"
                        class="leafygreen-ui-fn50nl"
                        height="16"
                        role="presentation"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-array css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_expansions"
            >
              <h6
                class="css-ho1tq1-StyledSubtitle e63qz861 leafygreen-ui-19p3n10"
                id="root_expansions__title"
              >
                Expansions
              </h6>
              <div
                class="css-1owtxr-ElementWrapper-AddButtonContainer e1jxkcec6"
              >
                <button
                  aria-disabled="false"
                  class="lg-ui-button-0000 leafygreen-ui-2jj1me"
                  data-cy="add-button"
                  type="button"
                >
                  <div
                    class="leafygreen-ui-v038xi"
                  />
                  <div
                    class="leafygreen-ui-v95oty"
                  >
                    <svg
                      alt=""
                      aria-hidden="true"
                      class="leafygreen-ui-18si895"
                      fill="none"
                      height="16"
                      role="presentation"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.5 2a1 1 0 0 0-1 1v3.5H3a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h3.5V13a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1V9.5H13a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1H9.5V3a1 1 0 0 0-1-1h-1Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                    Add
                  </div>
                </button>
              </div>
              <div
                class="css-1mmfwj9-ArrayContainer e1jxkcec5"
              >
                <div
                  class="css-nbhfvd-ArrayItemRow e1jxkcec7"
                >
                  <div
                    class="form-group field field-object css-mg3yql-DefaultFieldContainer eny4k1v0"
                    id=" root_expansions_0"
                  >
                    <fieldset
                      class="css-0"
                      id="root_expansions_0"
                    >
                      <div
                        class="form-group field field-string css-mg3yql-DefaultFieldContainer eny4k1v0"
                        id=" root_expansions_0_key"
                      >
                        <div
                          class="css-cjejq9-ElementWrapper ee4bs9n0"
                        >
                          <div
                            class="css-1kbcljo-StyledTextInput eevpusu6 leafygreen-ui-xtefr5"
                          >
                            <div
                              class="leafygreen-ui-a533bt"
                            >
                              <label
                                class="leafygreen-ui-gr5280"
                                for="textinput-4"
                              >
                                key
                              </label>
                            </div>
                            <div
                              class="leafygreen-ui-lzja97"
                            >
                              <input
                                aria-invalid="false"
                                aria-label="key"
                                autocomplete="on"
                                class="leafygreen-ui-6i61vl"
                                id="textinput-4"
                                required=""
                                type="text"
                                value="Sample Input"
                              />
                              <div
                                class="lg-ui-icon-selector-0000 leafygreen-ui-uy5fvv"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="form-group field field-string css-mg3yql-DefaultFieldContainer eny4k1v0"
                        id=" root_expansions_0_value"
                      >
                        <div
                          class="css-cjejq9-ElementWrapper ee4bs9n0"
                        >
                          <div
                            class="css-1kbcljo-StyledTextInput eevpusu6 leafygreen-ui-xtefr5"
                          >
                            <div
                              class="leafygreen-ui-a533bt"
                            >
                              <label
                                class="leafygreen-ui-gr5280"
                                for="textinput-5"
                              >
                                value
                              </label>
                            </div>
                            <div
                              class="leafygreen-ui-lzja97"
                            >
                              <input
                                aria-invalid="false"
                                aria-label="value"
                                autocomplete="on"
                                class="leafygreen-ui-6i61vl"
                                id="textinput-5"
                                required=""
                                type="text"
                                value="Sample Input"
                              />
                              <div
                                class="lg-ui-icon-selector-0000 leafygreen-ui-uy5fvv"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </div>
                  <div
                    class="css-opjgra-ElementWrapper-DeleteButtonWrapper e1jxkcec4"
                  >
                    <button
                      aria-disabled="false"
                      class="lg-ui-button-0000 leafygreen-ui-2jj1me"
                      data-cy="delete-item-button"
                      type="button"
                    >
                      <div
                        class="leafygreen-ui-v038xi"
                      />
                      <div
                        class="leafygreen-ui-v95oty"
                      >
                        <svg
                          aria-label="Trash Icon"
                          class="leafygreen-ui-yk23yl"
                          fill="none"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5 2a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1h2a1 1 0 0 1 1 1v1H2V3a1 1 0 0 1 1-1h2Zm9 3H2l1.678 8.392A2 2 0 0 0 5.64 15h4.72a2 2 0 0 0 1.962-1.608L14 5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-string css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_validProjects"
            >
              <div
                class="css-17q2u8g-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-1iyoj2o"
                >
                  <label
                    class="leafygreen-ui-1fi5x3a"
                    for="textarea-192"
                  >
                    Valid Projects
                  </label>
                  <textarea
                    class="leafygreen-ui-18em0fn"
                    id="textarea-192"
                    rows="5"
                    title="Valid Projects"
                  />
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests SpruceForm.stories Example2 1`] = `
<div>
  <div>
    <h3
      class="css-18p6yz-SettingsCardTitle e1h7idos1 leafygreen-ui-feh85s"
    >
      Admin Options
    </h3>
    <div
      class="css-akg61l-SettingsCard e1h7idos0 leafygreen-ui-1ecxdul"
    >
      <form
        class="rjsf"
        novalidate=""
      >
        <div
          class="form-group field field-object css-mg3yql-DefaultFieldContainer eny4k1v0"
          id=" root"
        >
          <fieldset
            class="css-0"
            id="root"
          >
            <div
              class="form-group field field-boolean css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_distroIsCluster"
            >
              <div
                class="css-17q2u8g-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-1"
                    id="checkbox-1-label"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-1-label"
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-1"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
                    >
                      <svg
                        class="leafygreen-ui-6caof5"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Mark distro as a cluster (jobs are not run on this host, used for special purposes).
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-boolean css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_disableShallowClone"
            >
              <div
                class="css-17q2u8g-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-2"
                    id="checkbox-2-label"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-2-label"
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-2"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
                    >
                      <svg
                        class="leafygreen-ui-6caof5"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Disable shallow clone for this distro.
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-boolean css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_disableQueue"
            >
              <div
                class="css-17q2u8g-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-3"
                    id="checkbox-3-label"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-3-label"
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-3"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-nlfut8"
                    >
                      <svg
                        class="leafygreen-ui-6caof5"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-6vh13p"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Disable queueing this distro. Tasks already in the task queue will be removed.
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-boolean css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_decommissionHosts"
            >
              <div
                class="css-17q2u8g-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-4"
                    id="checkbox-4-label"
                  >
                    <input
                      aria-checked="true"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-4-label"
                      checked=""
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-4"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
                    >
                      <svg
                        class="leafygreen-ui-1degv9q"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      Decommission hosts of this distro for this update
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="form-group field field-string css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_reprovisionMethod"
            >
              <div
                class="css-17q2u8g-ElementWrapper ee4bs9n0"
              >
                <div
                  aria-label="radio-group-"
                  class="leafygreen-ui-14o8ny9"
                  role="group"
                >
                  <div
                    class="leafygreen-ui-jpwlig"
                  >
                    <label
                      class="leafygreen-ui-14lohqh"
                      for="radio-group--0"
                    >
                      <input
                        aria-checked="false"
                        aria-describedby="lg-1"
                        aria-disabled="false"
                        class="lg-ui-radio-group-0002 leafygreen-ui-1iwed1m"
                        id="radio-group--0"
                        name="radio-group-"
                        type="radio"
                        value="restartJasper"
                      />
                      <div
                        class="lg-ui-radio-group-0001 leafygreen-ui-1tsb3ci"
                      >
                        <div
                          class="lg-ui-radio-group-0000 leafygreen-ui-lej95p"
                        />
                      </div>
                      Restart Jasper service on running hosts of this distro for this update
                    </label>
                  </div>
                  <div
                    class="leafygreen-ui-jpwlig"
                  >
                    <label
                      class="leafygreen-ui-14lohqh"
                      for="radio-group--1"
                    >
                      <input
                        aria-checked="false"
                        aria-describedby="lg-2"
                        aria-disabled="false"
                        class="lg-ui-radio-group-0002 leafygreen-ui-1iwed1m"
                        id="radio-group--1"
                        name="radio-group-"
                        type="radio"
                        value="reprovisionHosts"
                      />
                      <div
                        class="lg-ui-radio-group-0001 leafygreen-ui-1tsb3ci"
                      >
                        <div
                          class="lg-ui-radio-group-0000 leafygreen-ui-lej95p"
                        />
                      </div>
                      Reprovision running hosts of this distro for this update
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests SpruceForm.stories Example3 1`] = `
<div>
  <div>
    <h3
      class="css-18p6yz-SettingsCardTitle e1h7idos1 leafygreen-ui-feh85s"
    >
      UI Options
    </h3>
    <div
      class="css-akg61l-SettingsCard e1h7idos0 leafygreen-ui-1ecxdul"
    >
      <form
        class="rjsf"
        novalidate=""
      >
        <div
          class="form-group field field-object css-mg3yql-DefaultFieldContainer eny4k1v0"
          id=" root"
        >
          <fieldset
            class="css-0"
            id="root"
          >
            <div
              class="form-group field field-boolean css-mg3yql-DefaultFieldContainer eny4k1v0"
              id=" root_visible"
            >
              <div
                class="css-17q2u8g-ElementWrapper ee4bs9n0"
              >
                <div
                  class="leafygreen-ui-55kazc"
                >
                  <label
                    class="leafygreen-ui-75mjfl"
                    for="checkbox-5"
                    id="checkbox-5-label"
                  >
                    <input
                      aria-checked="true"
                      aria-disabled="false"
                      aria-label="checkbox"
                      aria-labelledby="checkbox-5-label"
                      checked=""
                      class="lg-ui-input-0000 leafygreen-ui-1a1e5kp"
                      id="checkbox-5"
                      type="checkbox"
                    />
                    <div
                      class="lg-ui-check-wrapper-0000 leafygreen-ui-1mf205r"
                    >
                      <svg
                        class="leafygreen-ui-1degv9q"
                        fill="none"
                        height="10"
                        stroke="#FFFFFF"
                        viewBox="0 0 10 10"
                        width="10"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2 5.5L4.12132 7.62132L8.36396 3.37868"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                    <div
                      class="lg-ui-ripple-0000 leafygreen-ui-11wjzqe"
                    />
                    <span
                      class="leafygreen-ui-1wmrjan"
                    >
                      This is the only visible page element
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </form>
    </div>
  </div>
</div>
`;
